# TCC_ECA2025

./: .gitignore  CMakeLists.txt  CMakePresets.json  COMO_INSTALAR_AMBIENTE.TXT  README.md  Teste_Cuda.py  main.cpp  main.py  requirements-gpu.txt  requirements.txt  setup.py
TestesGerais/: README.md  teste_tratar_Imagem_com_opencv2.cpp
img/: apple.jpg:Zone.Identifier
include/: utils.h
src/: utils.cpp
